--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_performance_web: 0.1.7+2
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
+  flutter_native_splash: 2.4.1
   flutter_plugin_android_lifecycle: 2.0.20
   flutter_svg: 2.0.10+1
   font_awesome_flutter: 10.7.0
@@ -66,7 +67,7 @@ dependencies:
   path_provider_foundation: 2.4.0
   path_provider_linux: 2.2.1
   path_provider_platform_interface: 2.1.2
-  path_provider_windows: 2.2.1
+  path_provider_windows: 2.3.0
   plugin_platform_interface: 2.1.8
   provider: 6.1.2
   shared_preferences: 2.3.2
@@ -79,6 +80,7 @@ dependencies:
   sqflite: 2.3.3+1
   sqflite_common: 2.5.4+3
   timeago: 3.6.1
+  universal_io: 2.2.2
   url_launcher: 6.3.0
   url_launcher_android: 6.3.10
   url_launcher_ios: 6.3.1
@@ -92,6 +94,7 @@ dependencies:
   video_player_avfoundation: 2.6.2
   video_player_platform_interface: 6.2.3
   video_player_web: 2.3.2
+  xml: 6.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -103,10 +106,23 @@ dependency_overrides:
   win32: 5.5.1
 
 dev_dependencies:
+  flutter_launcher_icons: 0.13.1
   flutter_lints: 4.0.0
+  image: 4.2.0
   lints: 4.0.0
   flutter_test:
     sdk: flutter
+
+
+flutter_launcher_icons:
+  android: 'launcher_icon'
+  ios: true
+  web:
+    generate: true
+  image_path: 'assets/images/app_launcher_icon.png'
+  adaptive_icon_background: '#ffffff'
+  adaptive_icon_foreground: 'assets/images/adaptive_foreground_icon.png'
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -129,6 +145,16 @@ flutter:
     - assets/pdfs/
     - assets/jsons/
 
+  fonts:
+    - family: MyFlutterApp
+      fonts:
+        - asset: assets/fonts/MyFlutterApp.ttf
+    - family: Barcodecamera
+      fonts:
+        - asset: assets/fonts/Barcodecamera.ttf
+    - family: PlusIcosns
+      fonts:
+        - asset: assets/fonts/Plus_icosns.ttf
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
