--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cached_network_image_web: 1.3.1
   collection: 1.18.0
   csslib: 0.17.3
+  equatable: 2.0.5
   file_picker: 8.1.2
   firebase_core: 3.6.0
   firebase_core_platform_interface: 5.3.0
@@ -41,6 +42,10 @@ dependencies:
   firebase_performance_platform_interface: 0.1.4+44
   firebase_performance_web: 0.1.7+2
   flutter_animate: 4.5.0
+  flutter_barcode_scanner: 
+    git:
+      url: https://github.com/FlutterFlow/flutter_barcode_scanner
+      ref: v2.0.0
   flutter_cache_manager: 3.4.1
   flutter_native_splash: 2.4.1
   flutter_plugin_android_lifecycle: 2.0.20
@@ -50,6 +55,7 @@ dependencies:
   go_router: 12.1.3
   google_fonts: 6.1.0
   html: 0.15.4
+  http: 1.2.2
   image_picker: 1.1.2
   image_picker_android: 0.8.12+13
   image_picker_for_web: 3.0.5
